# Backend_login_django

./: README.md  pyproject.toml
config/: settings.py  urls.py
usuario/: admin.py  cadastro.py  login.py  models.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_remove_usuario_data_nascimento_usuario_full_name.py
usuario/utils/: cadastro.py  login.py
